[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.98758, -0.14323, 0, 0, 0, 0, 480.259, 0.992805, 0, 0, 0, 0, 475.465, 716.409, 0, 0, 0, 0, -0.348358, 713.891, 0, 0, 0, 0, 1.98758, -0.14323 )
}

[node name="Main" type="Node"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="4"]

position = Vector2( 240, 450 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( 1.98758, -0.14323 )
rotation = 0.0023753
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="6" instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="game_over"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]


